# PrimeWorldEditor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Icons.qrc  LICENSE  PrimeWorldEditor.pro  README.md  appveyor.yml  dew.cmake  dewfile.json
src/Core/: CAreaAttributes.cpp  CAreaAttributes.h  CAudioManager.cpp  CAudioManager.h  CLightParameters.cpp  CLightParameters.h  CMakeLists.txt  CMayaSpline.cpp  CMayaSpline.h  CRayCollisionTester.cpp  CRayCollisionTester.h  CompressionUtil.cpp  CompressionUtil.h  Core.pro  IProgressNotifier.cpp  IProgressNotifier.h  IUIRelay.cpp  IUIRelay.h  Log.cpp  Log.h  NCoreTests.cpp  NCoreTests.h  SRayIntersection.h
src/Core/GameProject/: AssetNameGeneration.cpp  AssetNameGeneration.h  CAssetNameMap.cpp  CAssetNameMap.h  CDependencyTree.cpp  CDependencyTree.h  CGameExporter.cpp  CGameExporter.h  CGameInfo.cpp  CGameInfo.h  CGameProject.cpp  CGameProject.h  COpeningBanner.cpp  COpeningBanner.h  CPackage.cpp  CPackage.h  CResourceDatabase.cpp  CResourceDatabase.h  CResourceEntry.cpp  CResourceEntry.h  CResourceIterator.h  CResourceStore.cpp  CResourceStore.h  CVirtualDirectory.cpp  CVirtualDirectory.h  DependencyListBuilders.cpp  DependencyListBuilders.h
src/Core/OpenGL/: CDynamicVertexBuffer.cpp  CDynamicVertexBuffer.h  CFramebuffer.cpp  CFramebuffer.h  CGL.cpp  CGL.h  CIndexBuffer.cpp  CIndexBuffer.h  CRenderbuffer.cpp  CRenderbuffer.h  CShader.cpp  CShader.h  CShaderGenerator.cpp  CShaderGenerator.h  CUniformBuffer.cpp  CUniformBuffer.h  CVertexArrayManager.cpp  CVertexArrayManager.h  CVertexBuffer.cpp  CVertexBuffer.h  GLCommon.cpp  GLCommon.h
src/Core/Render/: CBoneTransformData.h  CCamera.cpp  CCamera.h  CDrawUtil.cpp  CDrawUtil.h  CGraphics.cpp  CGraphics.h  CRenderBucket.cpp  CRenderBucket.h  CRenderer.cpp  CRenderer.h  EDepthGroup.h  ERenderCommand.h  FRenderOptions.h  IRenderable.h  SRenderablePtr.h  SViewInfo.h
src/Core/Resource/: CAnimEventData.h  CAnimSet.cpp  CAnimSet.h  CAnimation.cpp  CAnimation.h  CAnimationParameters.cpp  CAnimationParameters.h  CAudioGroup.h  CAudioLookupTable.h  CAudioMacro.h  CCollisionMaterial.cpp  CCollisionMaterial.h  CCollisionMesh.cpp  CCollisionMesh.h  CCollisionMeshGroup.cpp  CCollisionMeshGroup.h  CDependencyGroup.h  CFont.cpp  CFont.h  CGameArea.cpp  CGameArea.h  CLight.cpp  CLight.h  CMapArea.h  CMaterial.cpp  CMaterial.h  CMaterialPass.cpp  CMaterialPass.h  CMaterialSet.cpp  CMaterialSet.h  CPakFile.cpp  CPakFile.h  CPoiToWorld.cpp  CPoiToWorld.h  CResCache.cpp  CResCache.h  CResTypeFilter.h  CResTypeInfo.cpp  CResTypeInfo.h  CResource.cpp  (+26 more)
src/Core/Scene/: CCharacterNode.cpp  CCharacterNode.h  CCollisionNode.cpp  CCollisionNode.h  CLightNode.cpp  CLightNode.h  CModelNode.cpp  CModelNode.h  CRootNode.h  CScene.cpp  CScene.h  CSceneIterator.cpp  CSceneIterator.h  CSceneManager.cpp  CSceneManager.h  CSceneNode.cpp  CSceneNode.h  CScriptAttachNode.cpp  CScriptAttachNode.h  CScriptNode.cpp  CScriptNode.h  CStaticNode.cpp  CStaticNode.h  ENodeType.h  EVisibilityFlags.h  FShowFlags.cpp  FShowFlags.h
src/Core/ScriptExtra/: CDamageableTriggerExtra.cpp  CDamageableTriggerExtra.h  CDoorExtra.cpp  CDoorExtra.h  CPointOfInterestExtra.cpp  CPointOfInterestExtra.h  CRadiusSphereExtra.cpp  CRadiusSphereExtra.h  CSandwormExtra.cpp  CSandwormExtra.h  CScriptExtra.cpp  CScriptExtra.h  CSpacePirateExtra.cpp  CSpacePirateExtra.h  CSplinePathExtra.cpp  CSplinePathExtra.h  CWaypointExtra.cpp  CWaypointExtra.h
src/Core/Tweaks/: CTweakCooker.cpp  CTweakCooker.h  CTweakData.h  CTweakLoader.cpp  CTweakLoader.h  CTweakManager.cpp  CTweakManager.h
src/Editor/: CAboutDialog.cpp  CAboutDialog.h  CAboutDialog.ui  CBasicViewport.cpp  CBasicViewport.h  CCustomDelegate.h  CDarkStyle.cpp  CDarkStyle.h  CEditorApplication.cpp  CEditorApplication.h  CErrorLogDialog.cpp  CErrorLogDialog.h  CErrorLogDialog.ui  CExportGameDialog.cpp  CExportGameDialog.h  CExportGameDialog.ui  CFileNameValidator.h  CGeneratePropertyNamesDialog.cpp  CGeneratePropertyNamesDialog.h  CGeneratePropertyNamesDialog.ui  CGizmo.cpp  CGizmo.h  CGridRenderable.h  CLineRenderable.h  CMakeLists.txt  CNodeCopyMimeData.h  CNodeSelection.cpp  CNodeSelection.h  CPakToolDialog.h  CProgressBarNotifier.h  CProgressDialog.cpp  CProgressDialog.h  CProgressDialog.ui  CProjectOverviewDialog.cpp  CProjectOverviewDialog.h  CProjectOverviewDialog.ui  CProjectSettingsDialog.cpp  CProjectSettingsDialog.h  CProjectSettingsDialog.ui  CPropertyNameValidator.cpp  (+32 more)
src/Editor/CharacterEditor/: CCharacterEditor.cpp  CCharacterEditor.h  CCharacterEditor.ui  CCharacterEditorViewport.cpp  CCharacterEditorViewport.h  CSkeletonHierarchyModel.cpp  CSkeletonHierarchyModel.h
src/Editor/CollisionEditor/: CCollisionEditor.cpp  CCollisionEditor.h  CCollisionEditor.ui  CCollisionEditorViewport.cpp  CCollisionEditorViewport.h
src/Editor/ModelEditor/: CModelEditorViewport.cpp  CModelEditorViewport.h  CModelEditorWindow.cpp  CModelEditorWindow.h  CModelEditorWindow.ui
src/Editor/PropertyEdit/: CPropertyDelegate.cpp  CPropertyDelegate.h  CPropertyModel.cpp  CPropertyModel.h  CPropertyRelay.h  CPropertyView.cpp  CPropertyView.h
src/Editor/ResourceBrowser/: CResourceBrowser.cpp  CResourceBrowser.h  CResourceBrowser.ui  CResourceDelegate.cpp  CResourceDelegate.h  CResourceMimeData.h  CResourceProxyModel.h  CResourceTableContextMenu.cpp  CResourceTableContextMenu.h  CResourceTableModel.cpp  CResourceTableModel.h  CResourceTableView.cpp  CResourceTableView.h  CVirtualDirectoryModel.cpp  CVirtualDirectoryModel.h  CVirtualDirectoryTreeView.cpp  CVirtualDirectoryTreeView.h
src/Editor/ScanEditor/: CScanEditor.cpp  CScanEditor.h  CScanEditor.ui
src/Editor/StringEditor/: CStringDelegate.cpp  CStringDelegate.h  CStringEditor.cpp  CStringEditor.h  CStringEditor.ui  CStringListModel.cpp  CStringListModel.h  CStringMimeData.h
src/Editor/Undo/: CAddLinkCommand.cpp  CAddLinkCommand.h  CBasicPropertyCommand.cpp  CBasicPropertyCommand.h  CChangeLayerCommand.cpp  CChangeLayerCommand.h  CClearSelectionCommand.cpp  CClearSelectionCommand.h  CCloneSelectionCommand.cpp  (+44 more)
(+5425 files in other folders)
